// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview should render correctly 1`] = `
<section
  class="md-background--card theme-preview"
>
  <header
    class="md-paper md-paper--2 md-toolbar md-background--primary md-toolbar--text-white md-toolbar--fixed"
    id="theme-builder-preview-toolbar"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-btn--toolbar md-toolbar--action-left"
      id="theme-builder-preview-drawer-toggle"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <i
        class="md-icon material-icons md-text--inherit"
      >
        menu
      </i>
    </button>
    <h2
      class="md-title md-title--toolbar"
      id="theme-builder-preview-toolbar-title"
    >
      Theme Preview
    </h2>
  </header>
  <div
    class="md-grid md-toolbar-relative"
  >
    <h2
      class="md-display-1 md-cell md-cell--12"
    >
      Look at this
    </h2>
    <button
      class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block theme-preview__btn"
      id="theme-builder-preview-btn"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      Button
    </button>
  </div>
  <button
    class="md-btn md-btn--icon md-btn--floating md-btn--fixed md-btn--fixed-br md-pointer--hover md-paper md-paper--2 md-background--secondary md-background--secondary-hover md-inline-block"
    id="theme-builder-preview-floating-btn"
    type="button"
  >
    <div
      class="md-ink-container"
    >
      <span
        aria-hidden="true"
      />
    </div>
    <i
      class="md-icon material-icons md-text--inherit"
    >
      email
    </i>
  </button>
</section>
`;

exports[`Preview should render correctly after the drawer has become visible 1`] = `
<section
  class="md-background--card theme-preview"
>
  <span>
    <div
      class="md-overlay md-overlay--drawer md-pointer--hover md-overlay--active"
    />
  </span>
  <header
    class="md-paper md-paper--2 md-toolbar md-background--primary md-toolbar--text-white md-toolbar--fixed"
    id="theme-builder-preview-toolbar"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-btn--toolbar md-toolbar--action-left"
      id="theme-builder-preview-drawer-toggle"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      <i
        class="md-icon material-icons md-text--inherit"
      >
        menu
      </i>
    </button>
    <h2
      class="md-title md-title--toolbar"
      id="theme-builder-preview-toolbar-title"
    >
      Theme Preview
    </h2>
  </header>
  <div
    class="md-grid md-toolbar-relative"
  >
    <h2
      class="md-display-1 md-cell md-cell--12"
    >
      Look at this
    </h2>
    <button
      class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block theme-preview__btn"
      id="theme-builder-preview-btn"
      type="button"
    >
      <div
        class="md-ink-container"
      >
        <span
          aria-hidden="true"
        />
      </div>
      Button
    </button>
  </div>
  <nav
    class="md-paper md-paper--5 md-drawer md-drawer--left md-drawer--fixed md-drawer--active md-transition--deceleration md-background--card"
    id="theme-builder-preview-drawer"
  >
    <header
      class="md-paper md-paper--0 md-toolbar"
      id="theme-builder-preview-drawer-toolbar"
    >
      <h2
        class="md-title md-title--toolbar"
        id="theme-builder-preview-drawer-toolbar-title"
      >
        Theme Preview
      </h2>
    </header>
    <ul
      class="md-list md-list--drawer md-toolbar-relative"
      id="theme-builder-preview-drawer-nav-items"
    >
      <li
        class="md-list-item"
      >
        <div
          aria-pressed="false"
          class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-list-tile md-text"
          role="button"
          tabindex="0"
        >
          <div
            class="md-ink-container"
          >
            <span
              aria-hidden="true"
            />
          </div>
          <div
            class="md-tile-content"
          >
            <div
              class="md-tile-text--primary md-text"
            >
              Woop woop
            </div>
          </div>
        </div>
      </li>
      <li
        class="md-list-item"
      >
        <div
          aria-pressed="false"
          class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-list-tile md-text"
          role="button"
          tabindex="0"
        >
          <div
            class="md-ink-container"
          >
            <span
              aria-hidden="true"
            />
          </div>
          <div
            class="md-tile-content"
          >
            <div
              class="md-tile-text--primary md-text"
            >
              That's the sound
            </div>
          </div>
        </div>
      </li>
      <li
        class="md-list-item"
      >
        <div
          aria-pressed="false"
          class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-list-tile md-text"
          role="button"
          tabindex="0"
        >
          <div
            class="md-ink-container"
          >
            <span
              aria-hidden="true"
            />
          </div>
          <div
            class="md-tile-content"
          >
            <div
              class="md-tile-text--primary md-text"
            >
              Of the Police
            </div>
          </div>
        </div>
      </li>
    </ul>
  </nav>
  <button
    class="md-btn md-btn--icon md-btn--floating md-btn--fixed md-btn--fixed-br md-pointer--hover md-paper md-paper--2 md-background--secondary md-background--secondary-hover md-inline-block"
    id="theme-builder-preview-floating-btn"
    type="button"
  >
    <div
      class="md-ink-container"
    >
      <span
        aria-hidden="true"
      />
    </div>
    <i
      class="md-icon material-icons md-text--inherit"
    >
      email
    </i>
  </button>
</section>
`;
